--- a/week1/index.html
+++ b/week1/index.html
@@ -1,30 +1,6 @@
-<!DOCTYPE html>
 <html>
     <head></head>
     <body>
-        
-        <h1>Toll House Chocolate Chip Cookie Recipe</h1>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>2 ¼ cups flour</li>
-            <li>1 teaspoon baking soda</li>
-            <li>1 teaspoon salt</li>
-            <li>1 cup butter (2 sticks)</li>
-            <li>¾ cup brown sugar</li>
-            <li>1 teaspoon Vanilla</li>
-            <li>2 eggs</li>
-            <li>2 cups chocolate chips</li>
-            <li>1 cup nuts</li>
-        </ul>
-        <h3>Directions</h3>
-        <ol>
-            <li>Place half of the ingredients in the order they are listed in a large bowl.</li>
-            <li>Mix thoroughly.</li>
-            <li>Place the remaining ingredients in the bowl and mix.</li>
-            <li>Scoop the dough into separate balls with a tablespoon.</li>
-            <li>Place the cookie dough balls on a greased pan with enough room between for the dough to settle.</li>
-            <li>Preheat the oven to 350°.</li>
-            <li>Place the pan in the oven for 20 – 25 mins.</li>
-        </ol>
+        Hello, world!
     </body>
 </html>
