--- a/week7/index.html
+++ b/week7/index.html
@@ -20,6 +20,7 @@
             </header>
             <div id="image">
                 <img src="imgs/pexels-oleg-magni-890577.jpg">
+            </div>
 
 <!--INGREDIENTS-->
 
